compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteWhen.kt
// FIR_IDENTICAL
// !DIAGNOSTICS: -UNUSED_EXPRESSION
fun test(a: Any) {
    when (a)<!SYNTAX!><!>
}